[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "honya", email = "info@honyaplan.com" }
]
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "Authlib>=1.2.1",
    "jwt>=1.3.1",
    "psd-tools>=1.9.28",
    "PyPDF2>=3.0.1",
    "wand>=0.6.13",
    "ImageMagic>=0.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
